# HPCM

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  doxygen.yml
CellMachine/: ApplicationContext.hpp  CellMachine.cpp  CellMachine.h  Grid.hpp  test.proto
CellMachine/Logic/: Logic.hpp
HPCM/: ApplicationContext.cpp  AudioSystem.hpp  CMakeLists.txt  CellMachine.cpp  Grid.cpp  Grid.hpp  Interface.cpp  Interface.hpp  Settings.cpp  Settings.hpp  Settings.proto  test.proto
HPCM-Docs/: Doxygen.cmake  DoxygenConfig.cmake
HPCM/Blocks/: BlockAbstract.hpp
HPCM/Logic/: Component.hpp  Logic.cpp
HPCM/Screens/LoadingScreen/: LoadingScreen.cpp  LoadingScreen.hpp
HPCM/Settings/: Interface.cpp  Interface.hpp  Settings.cpp  Settings.hpp  Settings.proto
